# pace2025

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE.md  Makefile  README.md  bench.sh  eval.sh  eval_all.sh  recon.sh  rg.gr  run.sh  run_all.sh  runner.sh  stresstest.py  stresstest.sh  test.sh
.github/workflows/: c-cpp.yml
docs/: reductions_pl.tex  solver_description.bib  solver_description.tex
experiments/: ilp.py
in/: big.gr
in/bench/: cliques20.gr  gen  gen.cpp  grid_10_5.gr  grid_2_25.gr  grid_3_16.gr  grid_5_10.gr  grid_7_7.gr  path1000.gr  random_small_components_x1000.gr  random_small_components_x300.gr  star1000.gr  tree1000.gr
in/correctness/: 4_isolated.gr  clique3.gr  empty.gr  forest_of_edges.gr  instance.gr  isolated.gr  isolated1.gr  issue4.gr  path4.gr  random_fail1.gr
in/tw/: big.gr  big2.gr
scripts/: histograms.py  install_dependencies.sh  report.py  run.sh  run_all.sh  runner.sh  stresstest.py  tamaki.py
scripts/drawings/: convert_ads_to_gexf.py  gexf_subgraph.py  run.sh
src/: .gdb_history  bench.cpp  bounds.h  brute.cpp  decomposition_test.cpp  ds.cpp  ds.h  eval.cpp  ex.cpp  flow_cutter_wrapper.cpp  flow_cutter_wrapper.h  graph.h  instance.h  main.cpp  nice_tree_decomposition.cpp  nice_tree_decomposition.h  out_verifier.cpp  random_graph_gen.cpp  recon.cpp  rooted_tree_decomposition.cpp  rooted_tree_decomposition.h  rrules.cpp  rrules.h  run.sh  run_highs.cpp  setops.h  small_graph_test.cpp  td.h  ternary.cpp  tree_decomposition.cpp  tree_decomposition.h  tw.h  tw_dp.cpp  utils.cpp  utils.h
src/dshunter/: bounds.cpp  bounds.h  dshunter.h  instance.cpp  instance.h  rrules.cpp  rrules.h  utils.cpp  utils.h
src/dshunter/rrules/: apply.cpp  defaults.cpp  reduce.cpp  rrules.h
src/dshunter/rrules/alber/: main_rule_1.cpp  main_rule_2.cpp  simple_rule_1.cpp  simple_rule_2.cpp  simple_rule_3.cpp  simple_rule_4.cpp
src/dshunter/rrules/disregard/: disregard_rule.cpp  disregarded_neighbourhood_rule.cpp  dominated_neighbourhood_marking_rule.cpp  dominated_neighbourhood_rule.cpp  dominated_neighbourhood_taking_rule.cpp  remove_disregarded_rule.cpp  single_dominator_rule.cpp
src/dshunter/rrules/dominate/: same_dominators_rule.cpp
src/dshunter/rrules/force/: force_edge_rule.cpp
src/dshunter/rrules/hs/: hs.cpp
src/dshunter/rrules/local/: contract.cpp  local_bruteforce.cpp
src/dshunter/solver/: branching_solver.cpp  branching_solver.h  bruteforce_solver.cpp  bruteforce_solver.h  gurobi_solver.cpp  gurobi_solver.h  solver.cpp  solver.h  ternary.cpp  treewidth_solver.cpp  treewidth_solver.h  vc_solver.cpp  vc_solver.h  verifier.cpp  verifier.h
src/dshunter/solver/branching/: branching_solver.cpp  branching_solver.h
src/dshunter/solver/bruteforce/: bruteforce_solver.cpp  bruteforce_solver.h
src/dshunter/solver/gurobi/: gurobi_solver.cpp  gurobi_solver.h
src/dshunter/solver/heuristic/: greedy.cpp  greedy.h
src/dshunter/solver/hs/: hs_solver.cpp  hs_solver.h
src/dshunter/solver/td/: flow_cutter_wrapper.cpp  flow_cutter_wrapper.h  nice_tree_decomposition.cpp  nice_tree_decomposition.h  rooted_tree_decomposition.cpp  tree_decomposition.cpp  tree_decomposition.h
src/dshunter/solver/treewidth/: ternary.cpp  ternary.h  treewidth_solver.cpp  treewidth_solver.h
src/dshunter/solver/treewidth/td/: decomposer.cpp  decomposer.h  exec_decompose.cpp  exec_decompose.h  exec_decomposer.cpp  exec_decomposer.h  flow_cutter_decomposer.cpp  flow_cutter_decomposer.h  flow_cutter_wrapper.cpp  flow_cutter_wrapper.h  nice_tree_decomposition.cpp  nice_tree_decomposition.h  rooted_tree_decomposition.cpp  rooted_tree_decomposition.h  tree_decomposition.cpp  tree_decomposition.h
src/dshunter/solver/vc/: vc_solver.cpp  vc_solver.h
src/dshunter/testing/: random_graph_gen.cpp  small_graph_test.cpp
